scenario-3/dumps/cluster-0/03-xcp-config/gateway.xcp-system.transit-backend-gw.yaml
apiVersion: gateway.xcp.tetrate.io/v2
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.xcp.tetrate.io/v2","kind":"Gateway","metadata":{"annotations":{},"labels":{"xcp.tetrate.io/gatewayGroup":"transit-backend-gg","xcp.tetrate.io/workspace":"transit-ws"},"name":"transit-backend-gw","namespace":"xcp-system"},"spec":{"http":[{"hostname":"echo.echo-tr.svc.cluster.local","name":"transit-backend","port":8080,"routing":{"rules":[{"route":{"serviceDestination":{"host":"echo-tr/echo.echo-tr.svc.cluster.local","port":80}}}]}}],"workloadSelector":{"labels":{"app" [...]
  creationTimestamp: "2026-05-28T15:04:35Z"
  generation: 1
  labels:
    xcp.tetrate.io/gatewayGroup: transit-backend-gg
    xcp.tetrate.io/workspace: transit-ws
  managedFields:
  - apiVersion: gateway.xcp.tetrate.io/v2
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:xcp.tetrate.io/gatewayGroup: {}
          f:xcp.tetrate.io/workspace: {}
      f:spec:
        .: {}
        f:http: {}
        f:workloadSelector:
          .: {}
          f:labels:
            .: {}
            f:app: {}
          f:namespace: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2026-05-28T15:04:35Z"
  name: transit-backend-gw
  namespace: xcp-system
  resourceVersion: "1315756"
  uid: 1b82e8e2-28ee-4c95-9809-e96e87f47e1c
spec:
  http:
  - hostname: echo.echo-tr.svc.cluster.local
    name: transit-backend
    port: 8080
    routing:
      rules:
      - route:
          serviceDestination:
            host: echo-tr/echo.echo-tr.svc.cluster.local
            port: 80
  workloadSelector:
    labels:
      app: echo-tr-gateway
    namespace: echo-tr
